# src/routes/product-route.js
@@ -3,8 +3,9 @@
 const express = require('express');
 const router = express.Router();
 const controller = require("../controllers/product-controller");
+const authService = require("../services/auth-service");
 
-router.post('/', controller.post);
+router.post('/', authService.authorize,controller.post);
 
 router.get('/', controller.getAll);
 router.get('/:slug', controller.getBySlug);
